@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.5 2002/09/04 00:34:50 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.6 2002/09/04 00:38:56 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1245,3 +1245,6 @@ usr.sbin/rpcbind/util.c				1.5
 
 include/netdb.h					1.27 (via patch)
   remove unused/unsupported AI_xx.  notified by PR 18072
+
+sys/netinet/esp_input.c				1.24
+  check packet length before fetching ESP crypto checksum.  sync w/kame
